--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "ejs": "~0.8.4",
     "errorhandler": "~1.0.0",
     "express": "~4.9.0",
-    "express-session": "~1.0.2",
+    "express-session": "^1.0.4",
     "generic-pool": "^2.2.1",
     "grunt-contrib-imagemin": "^0.7.2",
     "lodash": "~2.4.1",
